@@ -1,5 +1,13 @@
 2010-07-28  Deepak Bhole <dbhole@redhat.com>
 
+	* netx/net/sourceforge/jnlp/tools/JarSigner.java: Add new verifyResult enum
+	to track verification status.
+	(verifyJars): Mark jar unverified only if it has no signature.
+	(verifyJar): Use new verifyResult enum to return status based on if jar is
+	unsigned, signed but with errors, or signed and ok.
+
+2010-07-28  Deepak Bhole <dbhole@redhat.com>
+
 	* netx/net/sourceforge/jnlp/runtime/JNLPClassLoader.java (getInstance):
 	Collapse new loader paths into base loader.
 	* netx/net/sourceforge/jnlp/services/ServiceUtil.java (checkAccess): Check
